@@ -2,6 +2,8 @@ Revision history for Database-Abstraction
 
 0.10
 	Added t/init.t
+	The constructor now honours 'sep_char'
+	Test no_entry files
 
 0.09	Mon Jun 24 20:42:48 EDT 2024
 	Added t/chi.t
